istio-model/src/test/resources/metric.yaml
apiVersion: config.istio.io/v1alpha2
kind: instance
metadata:
  name: recommendationrequestcount
  namespace: istio-system
spec:
  compiledTemplate: metric
  params:
    value: "1"
    dimensions:
      source: source.service | "unknown"
      destination: destination.service | "unknown"
      version: destination.labels["version"] | "unknown"
      user_agent: request.headers["user-agent"] | "unknown"
    monitoredResourceType: '"UNSPECIFIED"'
