istio-model/src/test/resources/policy.yaml
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: basic-policy
spec:
  targets:
    - name: productpage
      ports:
        - name: https
        - number: 443
