istio-model/src/test/resources/virtual-service-issue119.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ratings-route
spec:
  hosts:
    - ratings.prod.svc.cluster.local
  http:
    - route:
        - destination:
            host: ratings.prod.svc.cluster.local
            subset: v1
      corsPolicy:
        allowOrigins:
          - exact: https:example.com
        allowMethods:
          - POST
          - GET
        allowCredentials: false
        allowHeaders:
          - X-Foo-Bar
        maxAge: "24h"
