istio-model/src/test/resources/virtual-service-issue48.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  creationTimestamp: null
  name: recommendation
  namespace: tutorial
spec:
  hosts:
    - recommendation
  http:
    - match:
        - headers:
            baggage-user-agent:
              regex: .*DarkLaunch.*
      route:
        - destination:
            host: recommendation
            subset: version-v2
    - route:
        - destination:
            host: recommendation
            subset: version-v1
